--- a/style.css
+++ b/style.css
@@ -1,92 +1,151 @@
 /*common styles*/
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-text-decoration: none;
-outline: none;
-font-family: 'Kanit', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  outline: none;
+  font-family: "Kanit", sans-serif;
 }
 /*end of common styles*/
 
-html{
-font-size:62.5%;
+html {
+  font-size: 62.5%;
 }
 
 /* section-1 */
-.section-1{
-width: 100%;
-height: 100vh;
-background:url(images/backg-1.jpg) no-repeat;
-background-size:cover;
-position: relative;
+.section-1 {
+  width: 100%;
+  height: 100vh;
+  background: url(images/backg-1.jpg) no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
-.banner{
-width: 100%;
-position: absolute;
-top: 20%;
-left: auto;
-/* transform:translateX(-50%); */
-text-align: center;
+.banner {
+  width: 100%;
+  position: absolute;
+  top: 20%;
+  left: auto;
+  /* transform:translateX(-50%); */
+  text-align: center;
 }
-.banner-heading{
-margin-bottom: 4rem;
-height: 20rem;
-display: flex;
-justify-content: center;
+.banner-heading {
+  margin-bottom: 4rem;
+  height: 20rem;
+  display: flex;
+  justify-content: center;
+  perspective: 50rem;
+  overflow: hidden;
 }
-.banner-heading span{
-font-family: 'Kanit', sans-serif;
-font-size:12rem;
-font-weight: 400;
-text-transform: uppercase;
-color: rgb(70, 64, 64);
-text-shadow: .3rem .3rem .6rem ;
-position: absolute;
+.banner-heading span {
+  font-family: "Kanit", sans-serif;
+  font-size: 12rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: rgb(70, 64, 64);
+  text-shadow: 0.3rem 0.3rem 0.6rem;
+  position: absolute;
+  transform: translateZ(8rem);
+  opacity: 0;
+  letter-spacing: 3rem;
+}
+.heading-1 {
+  animation: animateHeading 10s 3s infinite;
+}
 
+.heading-2 {
+  animation: animateHeading 10s 6s infinite;
 }
 
-.banner-paragraph{
-font-size: 4rem;
-font-weight: 400;
-text-transform: uppercase;
-color: #fff;
-background-color: rgb(0, 0, 0,0.6);
-width: 30%;
-margin: 0 auto 4rem auto;
-padding:1rem 0;
-box-shadow: 1rem 1rem 5rem rgb(0, 0, 0,0.5);
+.heading-3 {
+  animation: animateHeading 10s 9s infinite;
+}
+
+.heading-4 {
+  animation: animateHeading 10s 12s infinite;
+}
+
+@keyframes animateHeading {
+  0% {
+    transform: translateZ(8rem);
+    opacity: 0;
+    letter-spacing: 3rem;
+  }
+  3% {
+    transform: translateZ(0);
+    opacity: 1;
+    letter-spacing: 1.5rem;
+  }
+  25% {
+    transform: translateZ(0);
+    opacity: 0;
+    letter-spacing: 3rem;
+  }
+  28% {
+    transform: translateZ(8rem);
+    opacity: 0;
+    letter-spacing: 3rem;
+  }
+  100% {
+    transform: translateZ(8rem);
+    opacity: 0;
+    letter-spacing: 3rem;
+  }
+}
+
+.banner-paragraph {
+  font-size: 4rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: rgb(0, 0, 0, 0.6);
+  width: 30%;
+  margin: 0 auto 4rem auto;
+  padding: 1rem 0;
+  box-shadow: 1rem 1rem 5rem rgb(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  animation: fadeAnimation 1s 1.5s forwards;
+}
+
+@keyframes fadeAnimation {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.banner-btn {
+  width: 30rem;
+  height: 6rem;
+  background: linear-gradient(to right, rgb(121, 0, 0), rgb(236, 18, 18));
+  color: #fff;
+  font-size: 2rem;
+  text-transform: uppercase;
+  border-radius: 3rem;
+  border: 0.1rem solid #800505;
+  box-shadow: 1rem 2rem 3rem rgb(0, 0, 0, 0.5);
+  text-shadow: 0.6rem 0.3rem 0.2rem rgb(0, 0, 0, 0.4);
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.banner-btn::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, transparent, #fff, transparent);
+  position: absolute;
+  top: 0;
+  left: -100%;
+  transform: skewx(-30deg);
+  transition: left 0.5s;
+}
+.banner-btn:hover::before {
+  left: 100%;
 }
 /* section-1 */
-.banner-btn{
-width:30rem;
-height:6rem;
-background:linear-gradient(to right, rgb(121, 0, 0),rgb(236, 18, 18));
-color: #fff;
-font-size:2rem ;
-text-transform: uppercase;
-border-radius: 3rem;
-border: 0.1rem solid #800505;
-box-shadow: 1rem 2rem 3rem rgb(0, 0, 0,0.5);
-text-shadow: .6rem .3rem .2rem rgb(0, 0, 0,0.4);
-cursor: pointer;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
