--- a/style.css
+++ b/style.css
@@ -12,8 +12,125 @@
 html {
   font-size: 62.5%;
 }
+/* navbar */
+.navbar {
+  width: 100%;
+  height: 8rem; 
+  background-color: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  top: -8rem;
+  z-index: 10;
+  padding: 3rem;
+  transition: height 0.5s;
+  animation:animateNavbar 1s 0.5s forwards;
+}
+@keyframes animateNavbar {
+0%{
+top: -8rem;
+}
+100%{
+top: 0;
+}
+
+
+}
+.navbar.change{
+height: 100vh;  
+
+}
+.logo {
+  position: absolute;
+  top: 1.5rem;
+  left: 4rem;
+}
+.logo a {
+  font-family: "Kanit", sans-serif;
+  font-size: 2.5rem;
+  color: #eeeeee;
+  letter-spacing: 0.1rem;
+}
+.logo span {
+  font-family: "Kanit", sans-serif;
+  font-size: 5.5rem;
+  font-weight: bold;
+  color: #800505;
+}
+.nav-list {
+  position: absolute;
+  top:25%;
+  left: 50%;
+  display: flex;
+  transform: translateX(-50%);
+  flex-direction:column;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+}
+.change .nav-list{
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.7s 0.5s;
+}
+.nav-link{
+  font-family: "Kanit", sans-serif;
+  font-size: 4rem;
+  letter-spacing: 0.3rem;
+  color: crimson;
+  margin:2rem 0;
+  text-transform: uppercase;
+  font-weight: 700;
+  transition:color 0.2s
+}
+.nav-link:hover{
+  color: bisque;
+}
+
+/* end of navbar */
+/* menu */
+.menu {
+  width: 4rem;
+  height: 4rem;
+  position: fixed;
+  top: 2rem;
+  right: 4rem;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+}
+.line {
+  width: 100%;
+  height: 0.2rem;
+  background-color: aqua;
+  transition:transform 0.3s;
+}
+.line-1{
+width: 50%;
+}
+.change .line-1{
+  transform: translate(100%,1rem) rotate(-35deg);
+  transform-origin: right;
+}
+.line-3{
+width: 50%;
+margin-left:auto;
+
+}
+.change .line-3{
+  transform: translateY(-1rem) rotate(35deg);
+  transform-origin:right;
+}
+
+
+
+
+
+
+/* end of menu */
 
 /* section-1 */
+
 .section-1 {
   width: 100%;
   height: 100vh;
