--- a/style.css
+++ b/style.css
@@ -266,3 +266,121 @@ margin-left:auto;
   left: 100%;
 }
 /* section-1 */
+
+/* section-2 */
+.section-2{
+width: 100%;
+height: 100vh;
+background-color: rgb(18, 32, 58);
+display: flex;
+align-items: center;
+padding:1.5rem;
+position: relative;
+}
+.section-heading{
+font-family:'Courier New', Courier, monospace;
+font-size:10rem;
+font-weight: 300;
+color:#DDD;
+}
+.section-heading-line{
+width: 0rem;
+height: 0.2rem;
+background-color:#ddd;
+}
+
+
+
+.video-wrapper {
+width: 100rem;
+height: 50rem;
+top: 10rem;
+right: 15rem;
+position: absolute;
+
+}
+.video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.3;
+}
+.controls{
+width: 100%;
+position: absolute;
+bottom: 0;
+background-color: rgba(0, 0, 0, 0.7);
+}
+.video-bar-wrapper{
+width: 100%;
+height: 0.7rem;
+background-color:#000;
+position: absolute;
+top: 0;
+left: 0;
+}
+.video-bar{
+height: 100%;
+width: 20%;
+background-color:#ee0f0f;
+}
+.buttons{
+  padding: 2rem 1rem 1rem 1rem;
+}
+.buttons button{
+  background: none;
+  border:none;
+  cursor: pointer;
+}
+
+
+
+
+.section-2-paragraph{
+width:100rem;
+position: absolute;
+bottom: 8rem;
+right: 15rem;
+font-size: 2rem;
+color: #DDD;
+border-top: 0.3rem double #aaa;
+border-bottom: 0.3rem double #aaa;
+padding: 2rem;
+display: flex;
+flex-direction: column;
+justify-content:center;
+align-items: center;
+text-align: justify;
+text-shadow: 1rem 1rem 2rem rgb(0, 0, 0,0.7);
+
+}
+.fa-quote-left{
+align-self: flex-start;
+font-size: 5rem;
+margin-bottom: 2rem;
+}
+.fa-quote-right{
+  align-self: flex-end;
+  font-size: 5rem;
+}
+
+
+
+
+/* end of section-2 */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
