--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@
   outline: none;
   font-family: "Kanit", sans-serif;
 }
+.section-heading {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 10rem;
+  font-weight: 300;
+  color: #ddd;
+}
+.section-heading-line {
+  width: 8remrem;
+  height: 0.2rem;
+  background-color: #ddd;
+}
 /*end of common styles*/
 
 html {
@@ -15,28 +26,25 @@ html {
 /* navbar */
 .navbar {
   width: 100%;
-  height: 8rem; 
+  height: 8rem;
   background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   top: -8rem;
   z-index: 10;
   padding: 3rem;
   transition: height 0.5s;
-  animation:animateNavbar 1s 0.5s forwards;
+  animation: animateNavbar 1s 0.5s forwards;
 }
 @keyframes animateNavbar {
-0%{
-top: -8rem;
+  0% {
+    top: -8rem;
+  }
+  100% {
+    top: 0;
+  }
 }
-100%{
-top: 0;
-}
-
-
-}
-.navbar.change{
-height: 100vh;  
-
+.navbar.change {
+  height: 100vh;
 }
 .logo {
   position: absolute;
@@ -57,31 +65,31 @@ height: 100vh;
 }
 .nav-list {
   position: absolute;
-  top:25%;
+  top: 25%;
   left: 50%;
   display: flex;
   transform: translateX(-50%);
-  flex-direction:column;
+  flex-direction: column;
   align-items: center;
   opacity: 0;
   visibility: hidden;
 }
-.change .nav-list{
+.change .nav-list {
   opacity: 1;
   visibility: visible;
   transition: all 0.7s 0.5s;
 }
-.nav-link{
+.nav-link {
   font-family: "Kanit", sans-serif;
   font-size: 4rem;
   letter-spacing: 0.3rem;
   color: crimson;
-  margin:2rem 0;
+  margin: 2rem 0;
   text-transform: uppercase;
   font-weight: 700;
-  transition:color 0.2s
+  transition: color 0.2s;
 }
-.nav-link:hover{
+.nav-link:hover {
   color: bisque;
 }
 
@@ -103,29 +111,23 @@ height: 100vh;
   width: 100%;
   height: 0.2rem;
   background-color: aqua;
-  transition:transform 0.3s;
+  transition: transform 0.3s;
 }
-.line-1{
-width: 50%;
+.line-1 {
+  width: 50%;
 }
-.change .line-1{
-  transform: translate(100%,1rem) rotate(-35deg);
+.change .line-1 {
+  transform: translate(100%, 1rem) rotate(-35deg);
   transform-origin: right;
 }
-.line-3{
-width: 50%;
-margin-left:auto;
-
+.line-3 {
+  width: 50%;
+  margin-left: auto;
 }
-.change .line-3{
+.change .line-3 {
   transform: translateY(-1rem) rotate(35deg);
-  transform-origin:right;
+  transform-origin: right;
 }
-
-
-
-
-
 
 /* end of menu */
 
@@ -268,125 +270,164 @@ margin-left:auto;
 /* section-1 */
 
 /* section-2 */
-.section-2{
-width: 100%;
-height: 100vh;
-background-color: rgb(18, 32, 58);
-display: flex;
-align-items: center;
-padding:1.5rem;
-position: relative;
+.section-2 {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(18, 32, 58);
+  display: flex;
+  align-items: center;
+  padding: 1.5rem;
+  position: relative;
 }
-.section-heading{
-font-family:'Courier New', Courier, monospace;
-font-size:10rem;
-font-weight: 300;
-color:#DDD;
-}
-.section-heading-line{
-width: 0rem;
-height: 0.2rem;
-background-color:#ddd;
-}
-
-
 
 .video-wrapper {
-width: 100rem;
-height: 50rem;
-top: 10rem;
-right: 15rem;
-position: absolute;
-overflow: hidden;
+  width: 100rem;
+  height: 50rem;
+  top: 10rem;
+  right: 15rem;
+  position: absolute;
+  overflow: hidden;
 }
-.video{
+.video {
   width: 100%;
   height: 100%;
   object-fit: cover;
   opacity: 0.3;
 }
-.controls{
-width: 100%;
-position: absolute;
-bottom: 0;
-background-color: rgba(0, 0, 0, 0.7);
-transform: translateY(calc(100% - 0.4rem));
-transition: transform 0.4s;
+.controls {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  transform: translateY(calc(100% - 0.4rem));
+  transition: transform 0.4s;
 }
-.video-wrapper:hover .controls{
+.video-wrapper:hover .controls {
   transform: translateY(0);
 }
-.video-bar-wrapper{
-width: 100%;
-height: 0.7rem;
-background-color:#000;
-position: absolute;
-top: 0;
-left: 0;
+.video-bar-wrapper {
+  width: 100%;
+  height: 0.7rem;
+  background-color: #000;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-.video-bar{
-height: 100%;
-width: 20%;
-background-color:#ee0f0f;
-transition: width .2s linear;
+.video-bar {
+  height: 100%;
+  width: 20%;
+  background-color: #ee0f0f;
+  transition: width 0.2s linear;
 }
-.buttons{
+.buttons {
   padding: 2rem 1rem 1rem 1rem;
 }
-.buttons button{
+.buttons button {
   background: none;
-  border:none;
+  border: none;
   cursor: pointer;
 }
 
-
-
-
-.section-2-paragraph{
-width:100rem;
-position: absolute;
-bottom: 8rem;
-right: 15rem;
-font-size: 2rem;
-color: #DDD;
-border-top: 0.3rem double #aaa;
-border-bottom: 0.3rem double #aaa;
-padding: 2rem;
-display: flex;
-flex-direction: column;
-justify-content:center;
-align-items: center;
-text-align: justify;
-text-shadow: 1rem 1rem 2rem rgb(0, 0, 0,0.7);
-
+.section-2-paragraph {
+  width: 100rem;
+  position: absolute;
+  bottom: 8rem;
+  right: 15rem;
+  font-size: 2rem;
+  color: #ddd;
+  border-top: 0.3rem double #aaa;
+  border-bottom: 0.3rem double #aaa;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: justify;
+  text-shadow: 1rem 1rem 2rem rgb(0, 0, 0, 0.7);
 }
-.fa-quote-left{
-align-self: flex-start;
-font-size: 5rem;
-margin-bottom: 2rem;
+.fa-quote-left {
+  align-self: flex-start;
+  font-size: 5rem;
+  margin-bottom: 2rem;
 }
-.fa-quote-right{
+.fa-quote-right {
   align-self: flex-end;
   font-size: 5rem;
 }
 
-
-
-
 /* end of section-2 */
 
+/* section-3 */
+.section-3 {
+  width: 100%;
+  height: 100vh;
+  background-color: #03070e;
+  display: flex;
+  align-items: center;
+  padding-left: 10rem;
+}
+
+.pricing-card-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+.pricing-card{
+width: 25rem;
+height: 45rem;
+background-color: #181b1d;
+border-radius: 1rem;
+box-shadow: 2rem 2rem 6rem rgba(0, 0, 0, 0.7);
+}
+.pricing-card-front {
+width: 100%;
+height: 100%;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content:space-between;
+
+}
+.pricing-card-heading{
+font-size: 2rem;
+font-weight: 500;
+color: #fff;
+width: 100%;
+height: 5rem;
+display: flex;
+align-items: center;
+padding-left: 2rem;
+
+
+}
+.heading-free{
+
+  background: linear-gradient(to right, #087285,#0da5d3);
+  border-radius: 1rem 1rem 0 0;
+}
+.heading-basic{
+
+  background: linear-gradient(to right, #033a05,#049434);
+  border-radius: 1rem 1rem 0 0;
+}
+.heading-standard{
+
+  background: linear-gradient(to right, #1c0644,#140180);
+  border-radius: 1rem 1rem 0 0;
+}
+.heading-premium{
+
+  background: linear-gradient(to right, #ee2106,#b83333);
+  border-radius: 1rem 1rem 0 0;
+}
+.pricing-card-price{
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-size: 7rem;
+font-weight: 500;
+color: #fff;
+
+}
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+/* end of section-3 */
