--- a/style.css
+++ b/style.css
@@ -373,11 +373,12 @@ html {
   justify-content: space-evenly;
 }
 .pricing-card{
-width: 25rem;
-height: 45rem;
+width: 25rem!important;
+height: 45rem!important;
 background-color: #181b1d;
 border-radius: 1rem;
 box-shadow: 2rem 2rem 6rem rgba(0, 0, 0, 0.7);
+position: relative;
 }
 .pricing-card-front {
 width: 100%;
@@ -427,7 +428,85 @@ font-weight: 500;
 color: #fff;
 
 }
+.pricing-card-list{
+  list-style: none;
+}
+.list-free li{
+color:#087285;
+}
+.list-basic li{
+color:#033a05;  
+}
+.list-standard li{
+    color:#1c0644;
+}
+.list-premium li{
+color:#ee2106;      
+}
+.pricing-card-list i{
+font-size:1.8rem;
+width: 3rem;
+}
+.pricing-card-list span{
+font-size: 1.8rem;
+font-weight: 300;
+letter-spacing: 0.1rem;
 
+}
+.pricing-card-btn{
+width: 18rem;
+height: 5rem;
+margin-bottom: 3rem;
+border-radius: 3rem;
+border: none;
+font-size: 1.6rem;
+text-transform: uppercase;
+color: rgb(6, 15, 3);
+text-shadow: 0.3rem 0.3rem 0.6rem rgba(0, 0, 0, 0.5);
+cursor: pointer;
+font-weight: 600;
+}
+.btn-free{
+  background-color: #087285;
+}
+.btn-basic{
+  background-color: #033a05;
+}
+.btn-standard{
+  background-color: #1c0644;
+}
+.btn-premium{
+  background-color: #ee2106;
+}
+.pricing-card-back{
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height:100%;
+display: flex;
+justify-content: center;
+align-items: center;
+transform: rotateY(180deg);
+border-radius: 1rem;
+}
 
+.pricing-card-back a {
+  font-size: 2.5rem;
+  color: #fff;
+}
+
+.back-free{
+  background: linear-gradient(to right, #087285,#0da5d3);
+}
+.back-basic{
+  background: linear-gradient(to right, #033a05,#049434);
+}
+.back-standard{
+  background: linear-gradient(to right, #1c0644,#140180);
+}
+.back-premium{
+  background: linear-gradient(to right, #ee2106,#b83333);
+}
 
 /* end of section-3 */
