--- a/style.css
+++ b/style.css
@@ -510,3 +510,97 @@ border-radius: 1rem;
 }
 
 /* end of section-3 */
+
+/* section-4 */
+.section-4{
+width:100%;
+height: 100vh;
+background-color: #181b1d;
+display: flex;
+align-items: center;
+padding:0 10rem;
+}
+.contact-wrapper{
+width: 80%;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+.contact-details{
+  display:flex;
+  margin-bottom: 8rem;
+
+}
+.contact-details div{
+  width: 25rem;
+  text-align: center;
+  margin:4rem;
+  margin-bottom: 8rem;
+  
+}
+.contact-details i{
+font-size:5rem;
+color: #7a1010;
+}
+.contact-details h3{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 2.5rem;
+  margin: 2rem 0;
+  color: azure;
+}
+.contact-details p{
+font-size: 1.6rem;
+color: aliceblue;
+}
+.contact-wrapper h1{
+font-size: 4rem;
+color: #ccc;
+text-transform: uppercase;
+margin-bottom: 3rem;
+}
+.contact-form{
+width: 70rem;
+display: flex;
+flex-direction:column;
+
+}
+.contact-form input,
+.contact-form textarea{
+padding: 1.5rem;
+background-color: #444;
+color: #eee;
+border: none;
+margin-bottom: 2rem;
+font-family: "Kanit", sans-serif;
+font-size: 1.8rem;
+font-weight: 300;
+letter-spacing: 0.1rem;
+}
+.contact-form textarea{
+max-width: 100%;
+max-height: 15rem;
+min-height: 5.5rem;
+}
+.contact-form input[type="submit"]{
+  background-color: #7a1010;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: background-color;
+}
+.contact-form input[type="submit"]:hover{
+  background-color: #ff2f2f;
+ 
+}
+
+
+/* end of section-4 */
+
+
+
+
+
+
+
+
+
+
