--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 /* navbar */
 .navbar {
@@ -591,7 +592,34 @@ min-height: 5.5rem;
   background-color: #ff2f2f;
  
 }
+/* footer */
+.footer{
+width: 100%;
+height: 12rem;
+background-color: #024450;
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 0 10rem;
+}
+.footer a{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 2rem;
+  color: #0da5d3;
+  margin-right: 3rem;
+  letter-spacing:0.1rem;
+  transition: color 0.3s;
+}
+.footer a:hover{
+  color: #5dd5fa;
+}
+.copyright{
+  font-size: 2rem;
+  color: #0da5d3;
+}
 
+
+/* end of footer */
 
 /* end of section-4 */
 
